--- a/services/collab/pyproject.toml
+++ b/services/collab/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "flask>=3.1.2",
+    "flask-cors>=6.0.1",
     "flask-jwt-extended>=4.7.1",
     "flask-socketio>=5.5.1",
     "gevent>=25.9.1",
