--- a/services/collab/pyproject.toml
+++ b/services/collab/pyproject.toml
@@ -14,5 +14,6 @@ dependencies = [
     "isort>=7.0.0",
     "python-dotenv>=1.1.1",
     "redis>=6.4.0",
+    "structlog>=25.4.0",
     "supabase>=2.22.0",
 ]
