--- a/services/collab/pyproject.toml
+++ b/services/collab/pyproject.toml
@@ -12,6 +12,8 @@ dependencies = [
     "gevent>=25.9.1",
     "gevent-websocket>=0.10.1",
     "isort>=7.0.0",
+    "pytest>=8.4.2",
+    "pytest-cov>=7.0.0",
     "python-dotenv>=1.1.1",
     "redis>=6.4.0",
     "supabase>=2.22.0",
