--- a/services/auth/Dockerfile
+++ b/services/auth/Dockerfile
@@ -1,37 +1,21 @@
-# Multi-stage build for smaller image size
-FROM python:3.13-slim AS builder
+# This python image included uv by default
+FROM ghcr.io/astral-sh/uv:python3.13-bookworm-slim
 
 WORKDIR /app
 
-# Install uv
-RUN pip install --no-cache-dir uv
+# Enable bytecode compilation for better startup performance
+ENV UV_COMPILE_BYTECODE=1
 
-# Copy dependency files
-COPY pyproject.toml uv.lock ./
+# Copy dependency files first (for layer caching)
+COPY pyproject.toml uv.lock* ./
 
-# Install dependencies
-RUN uv sync --frozen --no-dev
-
-# Production stage
-FROM python:3.13-slim
-
-WORKDIR /app
-
-# Create non-root user for security
-RUN useradd -m -u 1000 appuser && \
-    chown -R appuser:appuser /app
-
-# Copy dependencies from builder
-COPY --from=builder /app/.venv /app/.venv
+# Install dependencies using uv
+# --frozen ensures reproducible builds
+# --no-cache reduces image size
+RUN uv sync --frozen --no-cache --no-dev
 
 # Copy application code
-COPY --chown=appuser:appuser . .
-
-# Switch to non-root user
-USER appuser
-
-# Add virtual environment to PATH
-ENV PATH="/app/.venv/bin:$PATH"
+COPY . .
 
 # Expose port
 EXPOSE 5566
