Updated dockerfile to reduce image size client 1.4GB -> 298MB auth 363MB -> 230MB collab 504MB -> 378MB

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -3,31 +3,36 @@ FROM node:20-alpine AS builder
 
 WORKDIR /app
 
-COPY package.json package-lock.json* yarn.lock* pnpm-lock.yaml* ./
+# Copy package files
+COPY package*.json ./
 
-# Install dependencies (prefer npm, fallback to yarn/pnpm if lockfile exists)
-RUN if [ -f package-lock.json ]; then npm ci; \
-    elif [ -f yarn.lock ]; then yarn install --frozen-lockfile; \
-    elif [ -f pnpm-lock.yaml ]; then pnpm install --frozen-lockfile; \
-    else npm install; fi
+# Install dependencies
+RUN npm ci
 
+# Copy source code
 COPY . .
 
-# Build Next.js app
+# Build Next.js app with standalone output
 RUN npm run build
 
 # Production image
 FROM node:20-alpine AS runner
 WORKDIR /app
 
-# Copy built app and node_modules from builder
-COPY --from=builder /app/.next ./.next
-COPY --from=builder /app/public ./public
-COPY --from=builder /app/package.json ./package.json
-COPY --from=builder /app/node_modules ./node_modules
-COPY --from=builder /app/next.config.* ./
-COPY --from=builder /app/.env* ./
+# Create non-root user
+RUN addgroup --system --gid 1001 nodejs
+RUN adduser --system --uid 1001 nextjs
+
+# Copy standalone output and static files
+COPY --from=builder /app/.next/standalone ./
+COPY --from=builder /app/.next/static ./.next/static
+COPY --from=builder --chown=nextjs:nodejs /app/public ./public
+
+USER nextjs
 
 EXPOSE 3000
 
-CMD ["npm", "start"]
+ENV PORT 3000
+ENV HOSTNAME "0.0.0.0"
+
+CMD ["node", "server.js"]
