--- a/client/.dockerignore
+++ b/client/.dockerignore
@@ -1,8 +1,12 @@
 node_modules
-.next
-npm-debug.log
-yarn-error.log
-dist
 coverage
+Dockerfile
+.dockerignore
+.git
+.gitignore
+.next/cache
+.vscode
 .env*
 .DS_Store
+*.log
+tests
