--- a/services/collab/Dockerfile
+++ b/services/collab/Dockerfile
@@ -1,5 +1,5 @@
 # This python image included uv by default
-FROM ghcr.io/astral-sh/uv:python3.13-bookworm-slim
+FROM ghcr.io/astral-sh/uv:python3.13-alpine
 
 WORKDIR /app
 
