Fixed share schema error and docker healthcheck

--- a/services/auth/Dockerfile
+++ b/services/auth/Dockerfile
@@ -22,7 +22,7 @@ EXPOSE 5566
 
 # Health check
 HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
-  CMD python -c "import urllib.request; urllib.request.urlopen('http://localhost:5566/health')" || exit 1
+  CMD python -c "import urllib.request; urllib.request.urlopen('http://localhost:5566/health', timeout=3)" || exit 1
 
 # Run the application
 CMD ["uv", "run", "main.py"]
