--- a/services/collab/Dockerfile
+++ b/services/collab/Dockerfile
@@ -22,7 +22,7 @@ EXPOSE 7788
 
 # Health check
 HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
-  CMD python -c "import requests; requests.get('http://localhost:7788/health')"
+  CMD python -c "import urllib.request; urllib.request.urlopen('http://localhost:7788/health', timeout=3)" || exit 1
 
 # Run application using uv
 CMD ["uv", "run", "main.py"]
